[gd_scene load_steps=2 format=3 uid="uid://bqwfnleix0nlb"]

[ext_resource type="Script" path="res://addons/godot-forms/nodes/input-components/form_field.gd" id="1_vdaip"]

[node name="FormField" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"UIFormField"
script = ExtResource("1_vdaip")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="FieldLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"FieldLabel"
text = "Field"
vertical_alignment = 1

[node name="FieldContainer" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/FieldContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="VBoxContainer/FieldContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
ignore_texture_size = true
stretch_mode = 5

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"ErrorLabel"
